# DRF-project

./: .env.sample  .gitignore  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
course/: models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
course/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_course_user_lesson_user_payment.py  0004_alter_payment_options_subscription_and_more.py  0005_course_update.py
pg_data/base/1/: 2619  2696  2840  2841  pg_internal.init
pg_data/base/16384/: 1247  1249  1259  1259_fsm  1259_vm  16387  16388  16392  16393  16395  16396  16399  16401  16403  16404  16407  16409  16415  16417  16421  16423  16430  16449  16465  16500  16526  16529  16558  16585  16591  16609  16612  2224  2579  2606  2606_fsm  2608  2608_fsm  2610  2610_fsm  (+28 more)
pg_data/base/5/: pg_internal.init
pg_data/global/: 1260  1262  2671  pg_control  pg_internal.init
pg_data/pg_stat/: pgstat.stat
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_delete_payment.py  0004_payment.py
